--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "pixijs-jsm",
   "version": "1.0.0",
   "description": "",
@@ -9,6 +10,7 @@
   "author": "scsx",
   "license": "ISC",
   "dependencies": {
+    "@pixi/graphics-extras": "^7.4.0",
     "pixi.js": "^7.4.0"
   }
 }
