--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@pixi/graphics-extras": "^7.4.0",
+    "@pixi/particle-emitter": "^5.0.8",
     "pixi.js": "^7.4.0"
   }
 }
